--- a/index.html
+++ b/index.html
@@ -1,96 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>OpenDraw</title>
-  <style>
-    :root {
-      --bg: #0f1220;
-      --card: #161a2f;
-      --text: #e6e8f2;
-      --muted: #a0a4c0;
-      --primary: #4096ED;
-      --wa: #25D366;
-      --border: #2a2f55;
-    }
-    * { box-sizing: border-box; }
-    body {
-      font-family: Inter, Arial, sans-serif;
-      background: radial-gradient(1200px 600px at 10% -10%, #1b1f3a 0%, transparent 40%),
-                  radial-gradient(1200px 600px at 110% 10%, #12153a 0%, transparent 40%),
-                  var(--bg);
-      color: var(--text);
-      padding: 20px;
-      min-height: 100vh;
-    }
-    .card {
-      max-width: 860px;
-      margin: auto;
-      background: linear-gradient(180deg, #181c3a 0%, var(--card) 100%);
-      border-radius: 18px;
-      padding: 28px;
-      box-shadow: 0 20px 40px rgba(0,0,0,.45);
-      border: 1px solid var(--border);
-    }
-    h1, h2 {
-      text-align: center;
-      letter-spacing: .3px;
-    }
-    h1 { font-size: 28px; }
-    h2 { font-size: 20px; color: var(--muted); }
-    p { color: var(--muted); }
-    textarea, input {
-      width: 100%;
-      margin-top: 10px;
-      padding: 12px 14px;
-      font-size: 14px;
-      background: #0f1330;
-      color: var(--text);
-      border: 1px solid var(--border);
-      border-radius: 10px;
-      outline: none;
-    }
-    textarea::placeholder, input::placeholder { color: #6e73a8; }
-    textarea { resize: vertical; min-height: 120px; }
-    textarea:focus, input:focus { border-color: var(--primary); }
-    button {
-      width: 100%;
-      margin-top: 14px;
-      padding: 14px;
-      font-size: 15px;
-      background: linear-gradient(135deg, #5aa2ff, var(--primary));
-      color: #fff;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      box-shadow: 0 8px 20px rgba(64,150,237,.35);
-    }
-    button:hover { filter: brightness(1.05); }
-    .hidden { display: none; }
-    .list-item {
-      display: grid;
-      grid-template-columns: 1fr 150px;
-      gap: 10px;
-      margin-top: 10px;
-    }
-    .list-item input { cursor: pointer; }
-    .wa {
-      background: linear-gradient(135deg, #3de37a, var(--wa));
-      box-shadow: 0 8px 20px rgba(37,211,102,.35);
-    }
-    .hint {
-      font-size: 13px;
-      color: var(--muted);
-      margin-top: 10px;
-    }
-    #viewer h1 {
-      font-size: 34px;
-      margin-top: 10px;
-      color: #fff;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <div class="card">
     <h1>🎁 Amigo Oculto</h1>
@@ -102,12 +19,16 @@
       <textarea id="names" rows="6" placeholder="Ana
 Bruno
 Carlos"></textarea>
-      <button onclick="generate()">Gerar sorteio</button>
+      <button id="btnGenerate" onclick="generate()">Gerar sorteio</button>
     </div>
 
     <!-- LINKS PARA MODERADORA -->
     <div id="links" class="hidden">
-      <h2>Enviar para os participantes</h2>
+      <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+        <h2>Enviar para os participantes</h2>
+        <button onclick="resetDraw()" class="btn-secondary">Novo
+          Sorteio ↻</button>
+      </div>
       <p class="hint">Clique no link para copiar ou use o botão do WhatsApp</p>
       <div id="list"></div>
     </div>
@@ -120,143 +41,7 @@ Carlos"></textarea>
     </div>
   </div>
 
-<script>
-// ===== CRYPTO (AES-GCM) =====
-async function deriveKey(secret) {
-  const enc = new TextEncoder();
-  const keyMaterial = await crypto.subtle.importKey(
-    'raw', enc.encode(secret), { name: 'PBKDF2' }, false, ['deriveKey']
-  );
-  return crypto.subtle.deriveKey(
-    {
-      name: 'PBKDF2',
-      salt: enc.encode('segredex-salt'),
-      iterations: 100000,
-      hash: 'SHA-256'
-    },
-    keyMaterial,
-    { name: 'AES-GCM', length: 256 },
-    false,
-    ['encrypt', 'decrypt']
-  );
-}
-
-async function encrypt(text, secret) {
-  const iv = crypto.getRandomValues(new Uint8Array(12));
-  const key = await deriveKey(secret);
-  const enc = new TextEncoder();
-  const encrypted = await crypto.subtle.encrypt(
-    { name: 'AES-GCM', iv },
-    key,
-    enc.encode(text)
-  );
-  const buff = new Uint8Array([...iv, ...new Uint8Array(encrypted)]);
-  return btoa(String.fromCharCode(...buff));
-}
-
-async function decrypt(payload, secret) {
-  const raw = Uint8Array.from(atob(payload), c => c.charCodeAt(0));
-  const iv = raw.slice(0, 12);
-  const data = raw.slice(12);
-  const key = await deriveKey(secret);
-  const decrypted = await crypto.subtle.decrypt(
-    { name: 'AES-GCM', iv },
-    key,
-    data
-  );
-  return new TextDecoder().decode(decrypted);
-}
-
-// ===== UTILS =====
-function shuffle(array) {
-  for (let i = array.length - 1; i > 0; i--) {
-    const j = Math.floor(Math.random() * (i + 1));
-    [array[i], array[j]] = [array[j], array[i]];
-  }
-}
-
-// ===== GENERATE =====
-async function generate() {
-  const lines = document.getElementById('names').value
-    .split(/\r?\n/)
-    .map(l => l.trim())
-    .filter(Boolean);
-
-  const people = lines.map(name => ({ name }));
-
-  if (people.length < 3) {
-    alert('Informe pelo menos 3 participantes');
-    return;
-  }
-
-  const names = people.map(p => p.name);
-
-  let shuffled = [...names];
-  do { shuffle(shuffled); } while (names.some((n, i) => n === shuffled[i]));
-
-  document.getElementById('admin').classList.add('hidden');
-  document.getElementById('links').classList.remove('hidden');
-
-  const list = document.getElementById('list');
-  list.innerHTML = '';
-
-  for (let i = 0; i < people.length; i++) {
-    const giver = people[i];
-    const receiver = shuffled[i];
-
-    // segredo individual = nome da própria pessoa
-    const encrypted = await encrypt(receiver, giver.name);
-
-    const url = `${location.origin}${location.pathname}?u=${encodeURIComponent(giver.name)}&k=${encrypted}`;
-
-    
-
-    const div = document.createElement('div');
-    div.className = 'list-item';
-
-    const input = document.createElement('input');
-    input.value = url;
-    input.readOnly = true;
-
-    const copy = document.createElement('button');
-    copy.innerText = 'Copiar';
-    copy.onclick = async () => {
-      try {
-        await navigator.clipboard.writeText(url);
-        copy.innerText = 'Copiado!';
-        setTimeout(() => copy.innerText = 'Copiar', 1500);
-      } catch {
-        input.select();
-        document.execCommand('copy');
-      }
-    };
-
-    div.appendChild(input);
-    div.appendChild(copy);
-    list.appendChild(div);
-  }
-}
-
-// ===== VIEWER =====
-async function loadViewer() {
-  const params = new URLSearchParams(location.search);
-  if (!params.has('u') || !params.has('k')) return;
-
-  const user = params.get('u');
-  const payload = params.get('k');
-
-  try {
-    const result = await decrypt(payload, user);
-    document.getElementById('viewerName').innerText = `Olá, ${user}!`;
-    document.getElementById('viewerResult').innerText = result;
-    document.getElementById('admin').classList.add('hidden');
-    document.getElementById('viewer').classList.remove('hidden');
-  } catch (e) {
-    alert('Link inválido ou adulterado');
-  }
-}
-
-loadViewer();
-</script>
+  <script src="js/app.js" defer></script>
 </body>
+
 </html>
